--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -828,7 +828,7 @@ filter:alpha(opacity=85);}
 
 .comt-title{font-size: 12px;color: #999;float: left;margin-left: -46px;width: 36px;text-align: center;}
 .comt-title .avatar{height:36px;width:36px;border-radius:50%;margin-bottom: 5px;}
-.comt-title p{margin-bottom: 0;overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
+.comt-title p{margin-bottom: 0;overflow:hidden; text-overflow:ellipsis; /*white-space:nowrap;*/}
 
 .comt-box{border:2px solid #ccd4d9;border-radius:2px;padding:4px 0 0 4px;background-color: #fff;position: relative;}
 .comt-ctrl{background-color:#fbfbfb;height:36px;margin-left:-4px;border-top:solid 1px #f2f2f2;}
