--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -402,9 +402,15 @@ body{background-color:#f6f6f6;position:relative;	/*margin-top: 79px;*/}
 /* article tags
  * ====================================================
 */
-.article-tags{margin:30px 0;text-align:center;}
-.article-tags a{display:inline-block;padding:4px 7px 3px;margin:0 4px 4px 0;color:#fff;font-size:12px;background-color:#45B6F7;opacity:0.85;filter:alpha(opacity=85);}
+.article-tags{margin:30px 0;/*text-align:center;*/}
+.article-tags .fa {margin-right: 5px; color: #bbb;font-size: 18px;vertical-align: middle;}
+.article-tags a{display:inline-block;padding:4px 7px 3px;margin:0 4px 4px 0;color:#fff;font-size:12px;opacity:0.85;filter:alpha(opacity=85);border-radius: 5px;}
 .article-tags a:hover{color:#fff;opacity:1;filter:alpha(opacity=100);}
+.article-tags a:nth-child(5n){background-color: #45B6F7;}
+.article-tags a:nth-child(5n+1){background-color: #428BCA;}
+.article-tags a:nth-child(5n+2){background-color: #5CB85C;}
+.article-tags a:nth-child(5n+3){background-color: #D9534F;}
+.article-tags a:nth-child(5n+4){background-color: #F0AD4E;}
 
 
 /* article nav
@@ -440,7 +446,7 @@ body{background-color:#f6f6f6;position:relative;	/*margin-top: 79px;*/}
 .relates-thumb li{display: inline-block;vertical-align: top;width: 22%;margin-right: 3%;margin-bottom: 20px;margin-top: 0;}
 .relates-thumb img{display: block;margin-bottom: 5px;}
 
-.action-share{color: #666;position: relative;text-align: center;margin: 30px 0;clear: both;}
+.action-share{color: #666;position: relative;/*text-align: center;*/margin: 30px 0;clear: both;}
 .bdsharebuttonbox.bdshare-button-style0-24 a{float: none;display: inline-block;margin: 0 2px;position: relative;}
 .bdsharebuttonbox.bdshare-button-style0-24 span{position: relative;*top: -3px;vertical-align: top;}
 .bdsharebuttonbox.bdshare-button-style0-24 .bds_count{margin: 0;color: #666;}
@@ -526,125 +532,39 @@ filter:alpha(opacity=85);}
 #comment-user-change {cursor: pointer;}
 #comment-user-change:hover {color: #FF5E52;}
 /* rollbar ======================================================================================================== */
-
-.rollbar {
-	position: fixed;
-	right: 15px;
-	width: 42px;
-	z-index: 999;
-}
-.rollbar-rb{
-	bottom: 15px;
-}
-
-.rollbar ul{
-	margin: 0;
-	padding: 0;
-	list-style: none;
-}
-.rollbar li{
-	position: relative;
-	margin-top: 1px;
-	text-align: center;
-}
-.rollbar a {
-	position: relative;
-	z-index: 2;
-	display: block;
-	height: 42px;
-	/*border-radius: 2px;*/
-	background-color: #aaa;
-	color: #fff;
-}
-.rollbar a:hover{
-	color: #fff;
-	background-color: #555;
-}
-.rollbar a span{
-	display: none;
-}
-.rollbar .fa{
-	position: relative;
-	line-height: 42px;
-	font-size: 24px;
-	height: 24px;
-}
+.rollbar {position: fixed; right: 15px; bottom: 20px; width: 42px; z-index: 999; }
+.rollbar ul{margin: 0; padding: 0; list-style: none; }
+.rollbar li{position: relative; margin-top: 1px; text-align: center;}
+.rollbar li.rollbar-totop{display: none;}
+.rollbar a {position: relative; z-index: 2; display: block; height: 42px; border-radius: 2px; background-color: #aaa; color: #fff; }
+.rollbar a:hover {background: #555;}
+.rollbar a span{display: none; }
+.rollbar .fa{position: relative; line-height: 42px; font-size: 24px; height: 24px; }
 .rollbar .fa-angle-up{font-size: 28px;top: -2px;}
 .rollbar .fa-qq{font-size: 22px;}
 .rollbar .fa-comments{top: -2px;}
-
-.rollbar li:hover h6 {
-	display: block;
-}
-.rollbar h6{
-	position: absolute;
-	z-index: 1;
-	top: 50%;
-	right: 100%;
-	/*right: -30%;*/
-	margin: -15px 10px 0 0;
-	height: 30px;
-	line-height: 30px;
-	font-size: 12px;
-	background-color: #555;
-	color: #fff;
-	width: 95px;
-	/*border-radius: 2px;*/
-	text-align: center;
-	display: none;
-}
-.rollbar h6 i{
-	position: absolute;
-	right: -4px;
-	top: 50%;
-	margin-top: -4px;
-	display: inline-block;
-	width: 0;
-	height: 0;
-	vertical-align: middle;
-	border-left: 4px solid #555;
-	border-top: 4px solid rgba(0, 0, 0, 0);
-	border-bottom: 4px solid rgba(0, 0, 0, 0);
-}
-
-
-
-.rollbar li.rollbar-totop{
-	display: none;
-}
-.rollbar li.rollbar-qrcode h6{
-	height: 120px;
-	margin-top: -60px;
-	padding: 0 5px 5px;
-}
-.rollbar li.rollbar-qrcode h6 img{
-	width: 85px;
-	height: 85px;
-	display: block;
-	margin: 0 auto;
-}
-
+.rollbar h6{position: absolute; z-index: 1; top: 50%; right: -20%; margin: -13px 6px 0 0; height: 26px; line-height: 26px; font-size: 12px; background-color: #555; color: #fff; width: 53px; border-radius: 2px;opacity: 0;filter: alpha(opacity=0);}
+.rollbar h6:after{content:" ";position: absolute; right: -4px; top: 50%; margin-top: -4px; display: inline-block; width: 0; height: 0; border-left: 4px solid #555; border-top: 4px solid transparent; border-bottom: 4px solid transparent; }
+.rollbar li.rollbar-qrcode h6{height: 116px; margin-top: -58px; padding: 0 5px 5px; width: 95px;display: none;opacity: 1;filter: alpha(opacity=100);}
+.rollbar li.rollbar-qrcode h6 img{width: 85px; height: 85px; display: block; margin: 0 auto; }
+.rollbar li:hover h6{right: 100%;opacity: 1;filter: alpha(opacity=100);}
+.rollbar li.rollbar-qrcode:hover h6{display: block;}
 @media (max-width: 640px) {
-	.rollbar{display: none;}
-	.rollbar-m-on{margin-bottom: 57px;}
-	.rollbar-m-on .rollbar{display: block;bottom: 0;right: 0;left: 0;width: 100%;border-top: 1px solid #f6f6f6;background-color: #fff;padding: 0 5px;}
-	.rollbar-m-on .rollbar ul{display: -moz-box;display: -webkit-box;display: -o-box;display: box;}
-	.rollbar-m-on .rollbar ul li{-webkit-box-flex: 1;margin-top: 0;}
-	.rollbar-m-on .rollbar ul li a{background-color: #fff;color: #666;}
-	.rollbar-m-on .rollbar ul li .fa{font-size: 20px;height: 20px;}
-	.rollbar-m-on .rollbar ul li h6 i{display: none;}
-	.rollbar-m-on .rollbar ul li:hover h6 {display: none;}
-	.rollbar-m-on .rollbar ul li.rollbar-qrcode h6{position: fixed;top: auto;bottom: 57px;left: 0;right: 0;margin: 0;width: 100%;background-color: #fff;color: #555;padding: 15px;font-size: 14px;font-weight: bold;height: auto;box-shadow: 0 -1px 5px rgba(0,0,0,0.05)}
-	.rollbar-m-on .rollbar ul li.rollbar-qrcode:hover h6{display: none;}
-	.rollbar-m-on .rollbar ul li.rollbar-qrcode h6 img{width: 120px;height: 120px;}
-
-	.rollbar-m-on .rollbar a{height: 56px;padding: 10px 0;border-radius: 2px;}
-	.rollbar-m-on .rollbar .fa{line-height: 1;}
-	.rollbar-m-on .rollbar a span{display: block;line-height: 12px;font-size: 10px;margin-top: 4px;overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
-	.rollbar-m-on .rollbar a:active{color: #111;background-color: #f6f6f6;}
+	body {margin-bottom: 57px;}
+	.rollbar{bottom: 0;right: 0;left: 0;width: 100%;border-top: 1px solid #f6f6f6;background-color: #fff;padding: 0 5px;box-shadow: 0 -1px 5px #eee;}
+	.rollbar ul.ori{display: -moz-box;display: -webkit-box;display: -o-box;display: box;}
+	.rollbar ul.ori li{-webkit-box-flex: 1;margin-top: 0;}
+	.rollbar ul.ori li a{background-color: #fff;color: #666;height: 56px;padding: 10px 0;}
+	.rollbar ul.ori li a span{display: block;line-height: 12px;font-size: 10px;margin-top: 4px;overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
+	.rollbar ul.ori li a:active{color: #111;background-color: #f6f6f6;}
+	.rollbar ul.ori li .fa{font-size: 20px;height: 20px;line-height: 1;}
+	.rollbar ul.ori li.rollbar-qrcode h6{position: fixed;top: auto;bottom: 57px;left: 0;right: 0;margin: 0;width: 100%;background-color: #fff;color: #555;padding: 15px;font-size: 14px;font-weight: bold;height: auto;box-shadow: 0 -1px 5px rgba(0,0,0,0.05)}
+	.rollbar ul.ori li.rollbar-qrcode h6 img{width: 120px;height: 120px;}
+	.rollbar ul.hangup {position: fixed;bottom:70px;right: 15px;z-index: 999;width:42px;}
+	.rollbar ul li h6{display: none}
+	.rollbar ul li h6:hover{display: none}
+	.rollbar ul li.rollbar-qrcode:hover h6{display: none;}
 }
-
-
 /* f404 ======================================================================================================== */
 .f404 {
 	text-align: center;
@@ -721,7 +641,7 @@ filter:alpha(opacity=85);}
 /*0924*/
 .ias_noneleft {display: block;margin:15px auto 0;text-align: center;position: relative;}
 .ias_noneleft i {position: relative;z-index: 2;background: #f6f6f6;padding:0 3px;}
-.ias_noneleft:after {content: ' ';height: 1px;width:100%;background: #999999;position: absolute;top:50%;left:0;}
+.ias_noneleft:after {content: ' ';height: 1px;width:100%;background: #eeeeee;position: absolute;top:50%;left:0;}
 
 /* pagenav ======================================================================================================== */
 .pagenav {
@@ -1139,8 +1059,8 @@ filter:alpha(opacity=85);}
 	padding: 15px 0 12px 15px;
 }
 .widget_ui_tags .items a {
-	color: #999;
-	background-color: #f6f6f6;
+	color: #fff;
+/*	background-color: #f6f6f6;*/
 	float: left;
 	width: 31.3333%;
 	margin: 0 1% 1% 0;
@@ -1149,12 +1069,25 @@ filter:alpha(opacity=85);}
 	height: 29px;
 	line-height: 29px;
 	overflow: hidden;
+	border-radius: 5px;
+	opacity: 0.85;
+	filter: alpha(opacity=85);
 }
+.widget_ui_tags .items a:nth-child(9n){background-color: #45B6F7;}
+.widget_ui_tags .items a:nth-child(9n+1){background-color: #15a287;}
+.widget_ui_tags .items a:nth-child(9n+2){background-color: #5CB85C;}
+.widget_ui_tags .items a:nth-child(9n+3){background-color: #D9534F;}
+.widget_ui_tags .items a:nth-child(9n+4){background-color: #567E95;}
+.widget_ui_tags .items a:nth-child(9n+5){background-color: #B433FF;}
+.widget_ui_tags .items a:nth-child(9n+6){background-color: #00a67c;}
+.widget_ui_tags .items a:nth-child(9n+7){background-color: #B37333;}
+.widget_ui_tags .items a:nth-child(9n+8){background-color: #FF6600;}
 .widget_ui_tags .items a:hover {
-	color: #fff;
-	background-color: #45B6F7;
+	/*color: #fff;
+	background-color: #45B6F7;*/
+	opacity: 1;
+	filter: alpha(opacity=100);
 }
-
 /* widget_ui_posts ======================================================================================================== */
 .widget_ui_posts li:last-child a {
 	border-bottom: none;
@@ -1539,7 +1472,7 @@ body.sign-show {
 .container-tags h1{font-size: 22px;margin: 0;text-align: center;margin-bottom: 15px;}
 .tagslist{overflow: hidden;}
 .tagslist ul{list-style-type: none;padding: 0;margin: 0 -2% 0 0;}
-.tagslist li{float: left;width: 23%;margin-right: 2%;margin-bottom: 2%;padding: 15px;border: 1px solid #eee;background-color: #fff;border-radius: 2px;}
+.tagslist li{float: left;width: 23%;margin-right: 2%;margin-bottom: 2%;padding: 15px;border: 1px solid #eee;background-color: #fff;border-radius: 5px;}
 .tagslist li .name{background-color: #eee;display: inline-block;padding: 5px 10px 4px;font-size: 12px;color: #666;}
 .tagslist li .name:hover{background-color: #444;color: #fff;}
 .tagslist li:hover{border-color: #ccc;}
@@ -1548,7 +1481,6 @@ body.sign-show {
 .tagslist li p{margin: 10px 0 0;font-size: 12px;height: 17px;overflow: hidden;display: block;line-height: 1.5;}
 .tagslist li .tit{color: #999;}
 .tagslist li .tit:hover{color: #444;}
-
 @media (max-width:1024px){
 	.tagslist li{width: 31.3333333%;}
 }
@@ -1733,11 +1665,14 @@ pre.prettyprint.linenums ol li {
 .m-navbar{display: none;}
 
 
+.header,
 .site-navbar,
 .site-search,
 .m-icon-nav,
 .widget-navcontent .item,
-.site-nav .fa-angle-down
+.site-nav .fa-angle-down,
+.rollbar li,
+.rollbar h6
 {
 	-webkit-transition:all 0.25s;
 	-moz-transition:all 0.25s;
@@ -1746,17 +1681,16 @@ pre.prettyprint.linenums ol li {
 	transition:all 0.25s;
 }
 
-.btn
-, .search-btn
-, a{
+.btn,
+.search-btn,
+a
+{
 	-webkit-transition:color 0.25s, background-color 0.25s;
 	-moz-transition:color 0.25s, background-color 0.25s;
 	-ms-transition:color 0.25s, background-color 0.25s;
 	-o-transition:color 0.25s, background-color 0.25s;
 	transition:color 0.25s, background-color 0.25s;
 }
-
-
 /*  ======================================================================================================== */
 
 @media (max-width: 1320px) {
@@ -1884,8 +1818,8 @@ pre.prettyprint.linenums ol li {
 	.article-content img{border-radius: 0;}
 
 	.post-copyright{display: none;}
-	.action-share{text-align: left;}
-	.article-tags{text-align: left;}
+/*	.action-share{text-align: left;}
+	.article-tags{text-align: left;}*/
 
 	.article-content{font-size: 15px;line-height: 24px;}
 	.article-content p,
@@ -1953,12 +1887,7 @@ pre.prettyprint.linenums ol li {
 	.flinks-m .flinks{display: block;}
 }
 @media (max-width: 480px) {
-	
-
-	.article-tags{text-align: center;}
-
-
-
+	/*.article-tags{text-align: center;}*/
 	.cat-first{padding: 10px 10px 10px 170px;}
 	.cat-first .thumbnail{margin-left: -160px;width: 150px;}
 	.cat-first .note{display: none;}
