--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -545,7 +545,7 @@ filter:alpha(opacity=85);}
 .rollbar .fa-comments{top: -2px;}
 .rollbar h6{position: absolute; z-index: 1; top: 50%; right: -20%; margin: -13px 6px 0 0; height: 26px; line-height: 26px; font-size: 12px; background-color: #555; color: #fff; width: 53px; border-radius: 2px;opacity: 0;filter: alpha(opacity=0);}
 .rollbar h6:after{content:" ";position: absolute; right: -4px; top: 50%; margin-top: -4px; display: inline-block; width: 0; height: 0; border-left: 4px solid #555; border-top: 4px solid transparent; border-bottom: 4px solid transparent; }
-.rollbar li.rollbar-qrcode h6{height: 116px; margin-top: -58px; padding: 0 5px 5px; width: 95px;display: none;opacity: 1;filter: alpha(opacity=100);}
+.rollbar li.rollbar-qrcode h6{height: 116px; margin-top: -58px; padding: 0 5px 5px; width: 95px;display: none;opacity: 1;filter: alpha(opacity=100);right: 100%;}
 .rollbar li.rollbar-qrcode h6 img{width: 85px; height: 85px; display: block; margin: 0 auto; }
 .rollbar li:hover h6{right: 100%;opacity: 1;filter: alpha(opacity=100);}
 .rollbar li.rollbar-qrcode:hover h6{display: block;}
