--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -228,9 +228,9 @@ body{background-color:#f6f6f6;position:relative;	/*margin-top: 79px;*/}
 .excerpt .focus{float:left;margin-left:-235px;width:220px;}
 .excerpt .thumb{width:220px;height:150px;}
 .excerpt header{margin-bottom:10px;}
-.excerpt .cat{color:#fff;background-color:#45BCF9;padding:3px 6px;font-size:12px;display:inline-block;position:relative;top:-2px;margin-right:6px;}
+.excerpt .cat{color:#fff;background-color:#45BCF9;padding:3px 6px;font-size:12px;display:inline-block;position:relative;top:-2px;margin-right:6px;border-radius: 3px;}
 .excerpt .cat:hover{opacity:0.85;filter:alpha(opacity=85);}
-.excerpt .cat i{position:absolute;top:50%;margin-top:-4px;right:-4px;display:inline-block;width:0;height:0;vertical-align:middle;border-left:4px solid #45BCF9;border-top:4px solid transparent;border-bottom:4px solid transparent;}
+.excerpt .cat:after {content:'';position:absolute;top:50%;margin-top:-4px;right:-4px;display:inline-block;width:0;height:0;vertical-align:middle;border-left:4px solid #45BCF9;border-top:4px solid transparent;border-bottom:4px solid transparent;}
 .excerpt h2{display:inline;font-size:18px;line-height:1.4;margin-top:0;font-weight:bold;}
 .excerpt h2 a{color:#555;}
 .excerpt h2 a:hover{color:#45B6F7;}
@@ -250,10 +250,10 @@ body{background-color:#f6f6f6;position:relative;	/*margin-top: 79px;*/}
 
 .list-comments-r .excerpt .meta .pc{float:right;margin-right:0;}
 
-.sticky-icon{line-height: 1;padding: 4px 4px 3px;font-size: 12px;background-color: #FF5E52;color: #fff;border-radius: 2px;display: inline-block;position: relative;margin-left: 5px;top: -2px;}
+.excerpt-sticky>h2:after,
+.excerpt-sticky header:after {content:'置顶';line-height: 1;padding: 3px;font-size: 12px;background-color: #FF5E52;color: #fff;border-radius: 3px;display: inline-block;position: relative;margin-left: 5px;top: -2px;}
 
 @media (max-width:640px){
-
 	.excerpt{border: none;margin: 0 0 1px;padding: 12px 150px 12px 15px;border-radius: 0 !important;}
 	.excerpt:hover{background-color: #fbfbfb;}
 	.excerpt .focus{float: right;margin-right: -135px;width: 120px;}
@@ -271,9 +271,11 @@ body{background-color:#f6f6f6;position:relative;	/*margin-top: 79px;*/}
 	.excerpt .meta .post-like{color: #bbb;}
 	.excerpt .meta .post-like.actived {color:#FF5E52;}
 	.excerpt .meta .post-like .fa{display: inline-block;}
-
-	.excerpt-sticky header{text-indent:34px;position: relative;}
-	.sticky-icon{position: absolute;top:1px;left:0;font-size: 10px;padding: 0;text-align: center;height: 15px;line-height: 18px;width: 28px;margin-left: 0;text-indent: 0;}
+	
+	.excerpt-sticky>h2:before,
+	.excerpt-sticky header:before {content:'置顶';font-size: 10px;padding: 3px;line-height: 1;background-color: #FF5E52;color: #fff;border-radius: 3px;display: inline-block;position: relative;margin-right: 5px;}
+	.excerpt-sticky>h2:after,
+	.excerpt-sticky header:after {content:'';display: none;}
 
 	.excerpt-text{padding-right: 15px;}
 	.excerpt-text header{height: auto;}
@@ -281,9 +283,8 @@ body{background-color:#f6f6f6;position:relative;	/*margin-top: 79px;*/}
 	.m-excerpt-time .excerpt .meta time{display: inline-block;margin-right: 10px;}
 	.m-excerpt-time .excerpt .meta .pv{margin-right: 10px;}
 
-	.m-excerpt-cat .excerpt .cat{display: inline-block;font-size: 10px;padding: 0 4px;text-align: center;height: 15px;line-height: 18px;margin-left: 0;margin-right: 3px;text-indent: 0;border-radius: 2px;}
-	.m-excerpt-cat .excerpt .cat i{right: -2px;}
-
+	.m-excerpt-cat .excerpt .cat{display: inline-block;font-size: 10px;padding: 3px 4px;line-height: 1;top:0;}
+	.m-excerpt-cat .excerpt .cat:after{right: -3px;}
 }
 
 @media (max-width:360px){
@@ -329,6 +330,7 @@ body{background-color:#f6f6f6;position:relative;	/*margin-top: 79px;*/}
 	.excerpt-minic h2 a span{}
 	.excerpt-minic-index .red{text-shadow: none;}
 	.excerpt-minic-index .note{font-size: 12px;margin-top: 7px;text-indent: 2em;line-height: 1.5;}
+	.excerpt-minic .meta {margin-bottom: 10px;padding-bottom: 8px;}
 }
 
 
@@ -1703,7 +1705,9 @@ a
 
 @media (max-width: 1024px) {
 	.content{margin-right: 0;}
-	.sidebar{display: none;}
+	.sidebar {display: block;float:none;width:auto;margin:15px;clear:both;}
+	.site-layout-3 .sidebar {float: none;margin-left: 15px;}
+	.widget.affix{position:relative;width:auto;top:0 !important;}
 	.site-search-form{padding: 25px 0;}
 	.navto-nav, .navto-design{display: none;}
 	.brand{display: none;}
@@ -1970,14 +1974,15 @@ a
 #navs .item li{float: left;width: 19%;margin-right: 1%;margin-top: 1%;padding: 15px;font-size: 12px;height: 89px;overflow: hidden;background-color: #fff;border-bottom: 15px solid #fff;}
 #navs .item li a{margin-bottom: 5px;display: inline-block;font-size: 14px;font-weight: bold;color: #45B6F7;border-bottom: 2px solid transparent;}
 #navs .item li a:hover{color: #FD8C84;border-bottom-color: #FD8C84;}
-
+#navs .item.active {box-shadow: 0 0 15px 0px #2196F3;border-radius: 10px;}
 #navs .items{margin-left: 160px;}
 #navs nav{width: 140px;position: absolute;top: 0;left: 0;height:100%;background-color: #45B6F7;}
 
 #navs nav ul{width: 140px;}
 #navs nav a{display: block;padding: 10px 20px;color: #fff;border-bottom: 1px solid rgba(0,0,0,0.08);}
 #navs nav a:hover, #navs nav .active a{color: #fff;}
-#navs nav .active a{font-weight: bold;}
+#navs nav li.active {background: #fff;}
+#navs nav .active a{font-weight: bold;color: #45B6F7}
 #navs nav ul.affix{position: fixed;top: 0;overflow-y: auto;height: 100%;bottom: 0;}
 #navs nav ul.affix-bottom{position: fixed;}
 
